--- a/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
+++ b/src/main/resources/templates/asm-forms/stratospheric-baloon-form.html
@@ -43,7 +43,7 @@
         <div class="row mb-3">
             <label for="name" class="col-sm-2 col-form-label col-form-label-sm col-form-label col-form-label-sm-sm">Imię i nazwisko</label>
             <div class="col-sm-6">
-                <input th:field="*{name}" type="text" class="form-control form-control-sm form-control form-control-sm-sm" id="name">
+                <input th:field="*{name}" type="text" class="form-control form-control-sm form-control form-control-sm-sm" id="name" th:readonly="${readOnly==true}">
                 <p th:errors="*{name}" class="form-error">Tu bedzie komunikat z bledem</p>
 
             </div>
@@ -51,7 +51,7 @@
         <div class="row mb-3">
             <label for="phone" class="col-sm-2 col-form-label col-form-label-sm col-form-label col-form-label-sm-sm">Numer telefonu</label>
             <div class="col-sm-6">
-                <input type="number" th:field="*{phone}" class="form-control form-control-sm form-control form-control-sm-sm" id="phone">
+                <input type="number" th:field="*{phone}" class="form-control form-control-sm form-control form-control-sm-sm" id="phone" th:readonly="${readOnly==true}">
                 <p th:errors="*{phone}" class="form-error">Tu bedzie komunikat z bledem</p>
 
             </div>
@@ -59,7 +59,7 @@
         <div class="row mb-3">
             <label for="email" class="col-sm-2 col-form-label col-form-label-sm col-form-label col-form-label-sm-sm">Email</label>
             <div class="col-sm-6">
-                <input th:field="*{email}" type="email" class="form-control form-control-sm form-control form-control-sm-sm" id="email">
+                <input th:field="*{email}" type="email" class="form-control form-control-sm form-control form-control-sm-sm" id="email" th:readonly="${readOnly==true}">
                 <p th:errors="*{email}" class="form-error">Tu bedzie komunikat z bledem</p>
 
             </div>
@@ -67,7 +67,7 @@
         <div class="row mb-3">
             <label for="mainDateTime" class="col-sm-2 col-form-label col-form-label-sm">Termin zasadniczy</label>
             <div class="col-sm-6">
-                <input th:field="*{mainDateTime}" type="datetime-local" class="form-control form-control-sm" id="mainDateTime">
+                <input th:field="*{mainDateTime}" type="datetime-local" class="form-control form-control-sm" id="mainDateTime" th:readonly="${readOnly==true}">
                 <p th:errors="*{mainDateTime}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
 
@@ -75,7 +75,7 @@
         <div class="row mb-3">
             <label for="backupDateTime" class="col-sm-2 col-form-label col-form-label-sm">Termin zapasowy</label>
             <div class="col-sm-6">
-                <input th:field="*{backupDateTime}" type="datetime-local" class="form-control form-control-sm" id="backupDateTime">
+                <input th:field="*{backupDateTime}" type="datetime-local" class="form-control form-control-sm" id="backupDateTime" th:readonly="${readOnly==true}">
                 <p th:errors="*{backupDateTime}" class="form-error">Tu bedzie komunikat z bledem</p>
 
             </div>
@@ -84,7 +84,7 @@
         <div class="row mb-3">
             <label for="location" class="col-sm-2 col-form-label col-form-label-sm">Miejscowość</label>
             <div class="col-sm-6">
-                <input th:field="*{location}" type="text" class="form-control form-control-sm" id="location">
+                <input th:field="*{location}" type="text" class="form-control form-control-sm" id="location" th:readonly="${readOnly==true}">
                 <p th:errors="*{location}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
         </div>
@@ -92,17 +92,17 @@
         <div class="row mb-3">
             <label for="latitude" class="col-sm-2 col-form-label col-form-label-sm">Długość geograficzna</label>
             <div class="col-sm-1">
-                <input th:field="*{latitudeDegrees}" type="number" class="form-control form-control-sm" id="latitude" placeholder="">
+                <input th:field="*{latitudeDegrees}" type="number" class="form-control form-control-sm" id="latitude" placeholder="" th:readonly="${readOnly==true}">
                 <div id="latdeghelp" class="form-text">Stopnie</div>
                 <p th:errors="*{latitudeDegrees}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
-                <input th:field="*{latitudeMinutes}" type="number" class="form-control form-control-sm" id="latMin">
+                <input th:field="*{latitudeMinutes}" type="number" class="form-control form-control-sm" id="latMin" th:readonly="${readOnly==true}">
                 <div id="latminhelp" class="form-text">Minuty</div>
                 <p th:errors="*{latitudeMinutes}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
-                <input th:field="*{latitudeSeconds}" type="number" class="form-control form-control-sm" id="latSec">
+                <input th:field="*{latitudeSeconds}" type="number" class="form-control form-control-sm" id="latSec" th:readonly="${readOnly==true}">
                 <div id="latsechelp" class="form-text">Sekundy</div>
                 <p th:errors="*{latitudeSeconds}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
@@ -113,17 +113,17 @@
         <div class="row mb-3">
             <label for="longitude" class="col-sm-2 col-form-label col-form-label-sm">Szerokość geograficzna</label>
             <div class="col-sm-1">
-                <input th:field="*{longitudeDegrees}" type="number" class="form-control form-control-sm" id="longitude" placeholder="">
+                <input th:field="*{longitudeDegrees}" type="number" class="form-control form-control-sm" id="longitude" placeholder="" th:readonly="${readOnly==true}">
                 <div id="londeghelp" class="form-text">Stopnie</div>
                 <p th:errors="*{longitudeDegrees}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
-                <input th:field="*{longitudeMinutes}" type="number" class="form-control form-control-sm" id="lonMin">
+                <input th:field="*{longitudeMinutes}" type="number" class="form-control form-control-sm" id="lonMin" th:readonly="${readOnly==true}">
                 <div id="lonminhelp" class="form-text">Minuty</div>
                 <p th:errors="*{longitudeMinutes}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">
-                <input th:field="*{longitudeSeconds}" type="number" class="form-control form-control-sm" id="lonSec">
+                <input th:field="*{longitudeSeconds}" type="number" class="form-control form-control-sm" id="lonSec" th:readonly="${readOnly==true}">
                 <div id="lonsechelp" class="form-text">Sekundy</div>
                 <p th:errors="*{longitudeSeconds}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
@@ -135,7 +135,7 @@
         <div class="row mb-3">
             <label for="maxHeight" class="col-sm-2 col-form-label col-form-label-sm">Maksymalna wysokość</label>
             <div class="col-sm-3">
-                <input th:field="*{maxHeight}" type="number" class="form-control form-control-sm" id="maxHeight">
+                <input th:field="*{maxHeight}" type="number" class="form-control form-control-sm" id="maxHeight" th:readonly="${readOnly==true}">
                 <p th:errors="*{maxHeight}" class="form-error">Tu bedzie komunikat z bledem</p>
             </div>
             <div class="col-sm-1">metrów</div>
@@ -144,7 +144,7 @@
         <div class="row mb-3">
             <label for="color" class="col-sm-2 col-form-label col-form-label-sm">Kolor balonu</label>
             <div class="col-sm-3">
-                <input th:field="*{baloonColor}" type="text" class="form-control form-control-sm" id="color">
+                <input th:field="*{baloonColor}" type="text" class="form-control form-control-sm" id="color" th:readonly="${readOnly==true}">
                 <p th:errors="*{baloonColor}" class="form-error">Tu bedzie komunikat z bledem</p>
 
             </div>
@@ -153,7 +153,7 @@
         <div class="row mb-3">
             <label for="color" class="col-sm-2 col-form-label col-form-label-sm">Rodzaj balonu</label>
             <div class="col-sm-3">
-                <select name="probingBaloonSize" class="form-select" aria-label="Default select example">
+                <select name="probingBaloonSize" class="form-select" aria-label="Default select example" th:disabled="${readOnly==true}">
                     <option th:each="probingBaloonSize : ${T(io.github.morbidreich.airform.entity.enums.ProbingBaloonSize).values()}"
                             th:value="${probingBaloonSize}" th:text="${probingBaloonSize.displayValue()}"></option>
                 </select>
@@ -163,7 +163,7 @@
         <div class="row mb-3">
             <label for="description" class="col-sm-2 col-form-label col-form-label-sm">Opis przedsięwzięcia</label>
             <div class="col-sm-6">
-                <textarea th:field="*{description}" rows="3" class="form-control form-control-sm" id="description"></textarea>
+                <textarea th:field="*{description}" rows="3" class="form-control form-control-sm" id="description" th:readonly="${readOnly==true}"></textarea>
                 <div id="textarea_feedback"></div>
                 <p th:errors="*{description}" class="form-error">Tu bedzie komunikat z bledem</p>
 
@@ -173,7 +173,7 @@
         <div class="row mb-3">
             <div class="col-sm-8">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" th:field="*{rodo}" id="rodo">
+                    <input class="form-check-input" type="checkbox" th:field="*{rodo}" id="rodo" th:disabled="${readOnly==true}">
 
                     <label class="form-check-label" for="rodo">
                         <span style="color: red">(Wymagane)</span> Oświadczam, że zostałem poinformowany o treści
@@ -198,10 +198,10 @@
 
         <div class="row mb-3">
             <div class="col-sm-4 d-grid gap-2">
-                <input type="submit" class="btn btn-primary btn-block" value="Wyślij formularz"/>
+                <input type="submit" class="btn btn-primary btn-block" value="Wyślij formularz" th:disabled="${readOnly==true}"/>
             </div>
             <div class="col-sm-4 d-grid gap-2">
-                <a th:href="@{/applicant}" class="btn btn-secondary btn-block">Anuluj</a>
+                <a th:href="@{/applicant/applications}" class="btn btn-secondary btn-block" th:text="${readOnly==true?'Powrót':'Anuluj'}">Anuluj</a>
             </div>
         </div>
     </form>
