--- a/src/main/resources/templates/error/406.html
+++ b/src/main/resources/templates/error/406.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Błąd 404 - nie znaleziono pliku</title>
+    <title>Błąd 406 - nieakceptowalne żądanie</title>
 </head>
 <body>
 <h3>Error 406</h3>
